# kuro

./: .elpaignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.org  TUI_BUG_ANALYSIS.md  flake.nix
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_advance.rs  fuzz_apc_payload.rs  fuzz_decode_png.rs  fuzz_kitty_params.rs  fuzz_utf8_input.rs
rust-core/: Cargo.toml
rust-core/benches/: ffi_latency.rs  grid_operations.rs  parser_throughput.rs  render_pipeline.rs
rust-core/fuzz/: Cargo.toml
rust-core/fuzz/fuzz_targets/: advance.rs  apc_payload.rs  csi_sequence.rs  decode_png.rs  insert_delete.rs  sgr.rs  utf8_input.rs
rust-core/fuzz/kuro-core-proxy/: Cargo.toml
rust-core/src/: error.rs  ffi.rs  grid.rs  lib.rs  parser.rs  terminal.rs  terminal_accessors.rs  tests.rs  types.rs  vttest.rs
rust-core/src/error/: tests.rs  tests_cases.rs
rust-core/src/ffi/: abstraction.rs  boundary.rs  bridge.rs  codec.rs  error.rs  fallback.rs  fallback_tests.rs  fallback_tests_cases.rs  fallback_tests_support.rs  init.rs  kuro_ffi.rs  safe_ref.rs  test_terminal.rs
rust-core/src/ffi/abstraction/: dirty.rs  global.rs  mod.rs  session.rs  session_init.rs  session_io.rs  session_osc_modes.rs  session_state.rs  session_tests.rs  session_tests_cases.rs  session_tests_support.rs  session_view.rs  tests_integration.rs  tests_integration_cases.rs  tests_integration_row_hash.rs  tests_integration_support.rs  tests_unit.rs  tests_unit_cases.rs  tests_unit_color_scheme.rs  tests_unit_color_scheme_basic.rs  tests_unit_color_scheme_isolation.rs  tests_unit_color_scheme_notifications.rs  tests_unit_color_scheme_support.rs  tests_unit_dec_accessors.rs  tests_unit_dec_accessors_basic.rs  tests_unit_dec_accessors_ext.rs  tests_unit_dec_accessors_pbt.rs  tests_unit_dec_accessors_prompt.rs  tests_unit_dec_accessors_support.rs  tests_unit_default_colors.rs  tests_unit_default_colors_basic.rs  tests_unit_default_colors_cursor.rs  tests_unit_default_colors_misc.rs  tests_unit_default_colors_scrollback.rs  tests_unit_default_colors_support.rs  tests_unit_dirty.rs  tests_unit_dirty_binary.rs  tests_unit_dirty_binary_support.rs  tests_unit_dirty_lines.rs  tests_unit_dirty_lines_support.rs  (+15 more)
rust-core/src/ffi/bridge/: emacs_impl.rs  events.rs  images.rs  lifecycle.rs  mod.rs  queries.rs  render.rs
rust-core/src/ffi/codec/: binary.rs  color.rs  hyperlinks.rs  line.rs  mod.rs  text_size.rs
rust-core/src/ffi/tests/: codec.rs  codec_attrs.rs  codec_binary.rs  codec_binary_faces.rs  codec_color.rs  codec_hyperlink.rs  codec_line.rs  codec_pbt.rs  codec_pbt2.rs  error.rs  init.rs  safe_ref.rs
rust-core/src/grid/: dirty_set.rs  dirty_set_tests.rs  dirty_set_tests2.rs  image.rs  image_tests.rs  image_tests2.rs  line.rs  line_pbt.rs  line_tests.rs  placeholder.rs  screen.rs
rust-core/src/grid/dirty_set/: tests_cases.rs  tests_support.rs
rust-core/src/grid/image/: tests.rs  tests_cases.rs  tests_delete_targets.rs  tests_support.rs
rust-core/src/grid/line/: tests.rs  tests_cases.rs  tests_support.rs
rust-core/src/grid/placeholder/: tests.rs
rust-core/src/grid/screen/: alternate.rs  cursor.rs  cursor_pbt.rs  cursor_pbt2.rs  cursor_tests.rs  cursor_tests2.rs  dirty.rs  dirty_tests.rs  edit.rs  edit_pbt.rs  edit_pbt2.rs  edit_tests.rs  graphics.rs  mod.rs  placeholder.rs  reflow.rs  resize.rs  scroll.rs  scroll_tests.rs  scrollback.rs  scrollback_tests.rs  scrollback_tests2.rs
rust-core/src/grid/tests/: screen.rs  screen_fr.rs  screen_init.rs  screen_insert_delete.rs  screen_unicode.rs
rust-core/src/parser/: apc.rs  csi.rs  dcs.rs  dec_private.rs  dec_private_kitty.rs  dec_private_support.rs  erase.rs  erase_support.rs  insert_delete.rs  kitty.rs  kitty_media.rs  kitty_support.rs  limits.rs  mod.rs  osc.rs  osc_iterm2_impls.rs  osc_protocol.rs  osc_protocol_support.rs  scroll.rs  sgr.rs  sgr_serialize.rs  sgr_support.rs  sixel.rs  sixel_color.rs  sixel_support.rs  tabs.rs  vte_handler.rs  vte_handler_csi.rs  vte_handler_esc.rs
rust-core/src/parser/limits/: tests.rs
rust-core/src/parser/tests/: apc.rs  apc_binary_payload.rs  apc_dispatch.rs  csi.rs  csi_cursor_line_clamping.rs  csi_device_status.rs  csi_xtwinops.rs  dcs.rs  dcs_decrqss.rs  dcs_xtgettcap.rs  dcs_xtgettcap_payload.rs  dec_private.rs  dec_private_edge.rs  dec_private_ext.rs  dec_private_kitty_keyboard.rs  erase.rs  erase_character_fill.rs  erase_ext.rs  erase_minimal_terminal.rs  insert_delete.rs  insert_delete_basic.rs  insert_delete_basic_ech.rs  insert_delete_cases.rs  insert_delete_decic_decdc.rs  insert_delete_edge_cases.rs  insert_delete_edge_cases2.rs  insert_delete_proptest.rs  insert_delete_support.rs  kitty.rs  kitty_media.rs  kitty_png.rs  (+31 more)
rust-core/src/pty/: fd.rs  mod.rs  posix.rs  posix.rs.bak  reader.rs
rust-core/src/tests/: apc.rs  mod.rs  osc.rs  regression.rs  sgr.rs  terminal.rs  terminal_insert_delete_line.rs
rust-core/src/types/: cell.rs  cell_pbt.rs  cell_tests.rs  charset.rs  color.rs  color_tests2.rs  cursor.rs  kitty.rs  meta.rs  osc.rs  osc_tests.rs
rust-core/src/util/: base64.rs  bit_set.rs  mod.rs
rust-core/tests/: integration_dcs.rs  integration_dec_modes.rs  integration_kitty.rs  integration_new_features.rs  integration_osc.rs  integration_sequences.rs  integration_sgr.rs  integration_sixel.rs  integration_terminal.rs  vt_compliance.rs
rust-core/tests/common/: mod.rs
rust-core/tests/include/: integration_dcs_capabilities.rs  integration_dcs_part2.rs  integration_dec_focus_events.rs  integration_dec_inband_resize.rs  integration_dec_reverse_video.rs  integration_dec_sync_output.rs  integration_osc_cwd.rs  integration_osc_ext.rs  integration_sequences_part1b.rs  integration_sequences_part2.rs  integration_sequences_part2b.rs  integration_sgr_combining.rs  integration_sgr_truecolor.rs  integration_terminal_advanced.rs  integration_terminal_cursor_save.rs  integration_terminal_cursor_save_part2.rs  vt_compliance_cursor_movement.rs  vt_compliance_device_attrs.rs  vt_compliance_ext.rs  vt_compliance_save_restore.rs
rust-core/tests/vttest/: run-vttest.sh  vttest-harness.el
(+786 files in other folders)
