[workspace]
members = ["rust-core"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["takeokunn"]
license = "MIT"
repository = "https://github.com/takeokunn/kuro"
rust-version = "1.84.0"

[workspace.dependencies]
vte = "0.15.0"
emacs = "0.19.0"
unicode-width = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.5"
criterion = "0.5"
nix = { version = "0.29", features = ["process", "term", "fs", "signal"] }
png = "0.17"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
