[package]
name = "kuro-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec.workspace = true
vte.workspace = true
emacs.workspace = true
unicode-width.workspace = true
thiserror.workspace = true
serde.workspace = true
nix.workspace = true
which.workspace = true
crossbeam-channel.workspace = true
base64.workspace = true
png.workspace = true
compact_str = { version = "0.8", features = ["serde"] }
memchr.workspace = true

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_throughput"
harness = false

[[bench]]
name = "grid_operations"
harness = false

[[bench]]
name = "ffi_latency"
harness = false
