[package]
name = "kuro-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vte.workspace = true
emacs.workspace = true
unicode-width.workspace = true
nix.workspace = true
png.workspace = true
compact_str = "0.8"
ahash.workspace = true

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
base64 = "0.22"

[[bench]]
name = "parser_throughput"
harness = false

[[bench]]
name = "grid_operations"
harness = false

[[bench]]
name = "ffi_latency"
harness = false

[[bench]]
name = "render_pipeline"
harness = false
